--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+/* Tailwind config */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
